@@ -1,4 +1,12 @@
 2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
+	* correct a situation where the POSTGRES variable was prematurely
+	overwritten. It specifies either where to find a postgres install, 
+	or else how to find it. The author of the overwriting code wanted
+	to try a pair of standard locations for postgres; as a result of
+	my changes it makes those checks only if the POSTGRES variable
+	never received a value on the command line.
+
+2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
 	* Hi everybody!
 	* This is my first attempt to extend the build system: here, 
 	I added "POSTGRES=SEPARATELY PGLIB=... PGINC=..." and
